nldl_derive/tests/ui/deserializable/unannotated-deserialize-error-type-fails.rs
use nldl::attr::UnknownAttribute;

#[derive(Debug, PartialEq, nldl::attr::Deserialize)]
enum ControllerAttributeOperation {
    #[nla_type(_)]
    Unknown(UnknownAttribute),
}

fn main() {}
